# microservice-with-k8s

./: README.md
python/: pyproject.toml
python/src/auth/: Dockerfile  auth.md  init.sql  pyproject.toml  server.py
python/src/auth/manifests/: auth-deploy.yaml  configmap.yaml  secrets.yaml  service.yaml
python/src/converter/: Dockerfile  consumer.py  pyproject.toml
python/src/converter/manifests/: converter-deploy.yaml
python/src/converter/services/: to_mp3.py
python/src/gateway/: Dockerfile  gateway.md  pyproject.toml  server.py
python/src/gateway/interfaces/: auth_clients.py
python/src/gateway/manifests/: configmap.yaml  gateway-deploy.yaml  ingress.yaml  secrets.yaml  service.yaml
python/src/gateway/services/: storage.py
python/src/gateway/storage_service/: util.py
python/src/rabbitmq/: rabbitmq.md
python/src/rabbitmq/manifests/: ingress.yaml  service.yaml  statefulset.yaml
