[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Sid Hayoun Lee <sidhlee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Flask-MySQLdb = "^1.0.1"
PyJWT = "^2.6.0"

[tool.poetry.dev-dependencies]
pylint = "^2.15.8"
# jedi = "^0.18.2"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
