[tool.poetry]
name = "converter"
version = "0.1.0"
description = ""
authors = ["Sid Hayoun Lee <sidhlee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.1"
pymongo = "^4.3.3"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
