[tool.poetry]
name = "gateway"
version = "0.1.0"
description = ""
authors = ["Sid Hayoun Lee <sidhlee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
pika = "^1.3.1"
Flask-PyMongo = "^2.3.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
